--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+.tabs__buttons {
+  margin-bottom: 10px;
+}
+.tabs__button {
+  display: inline-block;
+  padding: 5px;
+  cursor: pointer;
+}
+.tabs__button--active {
+  border-bottom: 2px solid #5076ff;
+}
